--- a/build.gradle
+++ b/build.gradle
@@ -114,7 +114,7 @@ ext.tempto_ldap = project(':tempto-ldap')
 ext.tempto_kafka = project(':tempto-kafka')
 ext.expected_result_generator = project(':expected-result-generator')
 ext.tempto_version = '1.51-SNAPSHOT'
-ext.tempto_group = "io.prestodb.tempto"
+ext.tempto_group = "io.prestosql.tempto"
 ext.isReleaseVersion = !tempto_version.endsWith("SNAPSHOT")
 
 ext.nexusUsername = 'setup_nexusUsername_in_gradle.properties'
@@ -189,11 +189,11 @@ configure(subprojects - expected_result_generator - tempto_examples) {
                 pom.project {
                     packaging 'jar'
                     description 'Tempto - test framework'
-                    url 'https://github.com/prestodb/tempto'
+                    url 'https://github.com/prestosql/tempto'
                     scm {
-                        url 'git@github.com:prestodb/tempto.git'
-                        connection 'scm:git:git@github.com:prestodb/tempto.git'
-                        developerConnection 'scm:git:git@github.com:prestodb/tempto.git'
+                        url 'git@github.com:prestosql/tempto.git'
+                        connection 'scm:git:git@github.com:prestosql/tempto.git'
+                        developerConnection 'scm:git:git@github.com:prestosql/tempto.git'
                     }
                     licenses {
                         license {
