--- a/tempto-core/src/test/resources/log4j.properties
+++ b/tempto-core/src/test/resources/log4j.properties
@@ -13,7 +13,7 @@
 #
 # Set root logger to INFO and add a custom appender.
 log4j.rootLogger=TRACE, TEST_FRAMEWORK_LOGGING_APPENDER, CONSOLE
-log4j.appender.TEST_FRAMEWORK_LOGGING_APPENDER=io.prestodb.tempto.logging.TestFrameworkLoggingAppender
+log4j.appender.TEST_FRAMEWORK_LOGGING_APPENDER=io.prestosql.tempto.logging.TestFrameworkLoggingAppender
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.Target=System.out
