--- a/tempto-examples/build.gradle
+++ b/tempto-examples/build.gradle
@@ -35,7 +35,7 @@ dependencies {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'io.prestodb.tempto.examples.TemptoExamples'
+        attributes 'Main-Class': 'io.prestosql.tempto.examples.TemptoExamples'
     }
 }
 
