Upgrade Presto JDBC to 302

--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ ext.versions = [
         commons_dbcp2: '2.1',
         hive_jdbc    : '0.13.1-5',
         hive         : '1.2.0-2',
-        presto       : '0.181',
+        presto       : '302',
         reflections  : '0.9.9',
         bytebuddy    : '0.7-rc2',
         jsch         : '0.1.52',
@@ -86,7 +86,7 @@ ext.libraries = [
         tpcdsgen             : "com.teradata.tpcds:tpcds:${versions.tpcdsgen}",
         hive_jdbc            : "com.facebook.presto.hive:hive-apache-jdbc:${versions.hive_jdbc}",
         hive                 : "com.facebook.presto.hive:hive-apache:${versions.hive}",
-        presto_jdbc          : "com.facebook.presto:presto-jdbc:${versions.presto}",
+        presto_jdbc          : "io.prestosql:presto-jdbc:${versions.presto}",
         reflections          : "org.reflections:reflections:${versions.reflections}",
         bytebuddy            : "net.bytebuddy:byte-buddy:${versions.bytebuddy}",
         jsch                 : "com.jcraft:jsch:${versions.jsch}",
