--- a/tempto-examples/src/main/resources/tempto-configuration-read-only.yaml
+++ b/tempto-examples/src/main/resources/tempto-configuration-read-only.yaml
@@ -9,7 +9,7 @@ databases:
     alias: presto
 
   presto:
-    jdbc_driver_class: com.facebook.presto.jdbc.PrestoDriver
+    jdbc_driver_class: io.prestosql.jdbc.PrestoDriver
     jdbc_url: jdbc:presto://${cluster.presto}:8080/hive/default
     jdbc_user: hdfs
     jdbc_password: "***empty***"
