--- a/tempto-examples/src/main/resources/tempto-configuration.yaml
+++ b/tempto-examples/src/main/resources/tempto-configuration.yaml
@@ -38,7 +38,7 @@ databases:
       port: 9083
 
   presto:
-    jdbc_driver_class: com.facebook.presto.jdbc.PrestoDriver
+    jdbc_driver_class: io.prestosql.jdbc.PrestoDriver
     jdbc_url: jdbc:presto://${cluster.presto}:8080/hive/default
     jdbc_user: hdfs
     jdbc_password: "***empty***"
@@ -46,7 +46,7 @@ databases:
     table_manager_type: jdbc
 
   presto_tpcds:
-    jdbc_driver_class: com.facebook.presto.jdbc.PrestoDriver
+    jdbc_driver_class: io.prestosql.jdbc.PrestoDriver
     jdbc_url: jdbc:presto://${cluster.presto}:8080/hive/tpcds
     jdbc_user: hdfs
     jdbc_password: "***empty***"
