Upgrade Hive JDBC to 0.13.1-6

--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ ext.versions = [
         tpcdsgen     : '1.2',
         commons_lang3: '3.3.2',
         commons_dbcp2: '2.1',
-        hive_jdbc    : '0.13.1-5',
+        hive_jdbc    : '0.13.1-6',
         hive         : '1.2.0-2',
         presto       : '302',
         reflections  : '0.9.9',
@@ -84,7 +84,7 @@ ext.libraries = [
         snakeyaml            : "org.yaml:snakeyaml:${versions.snakeyaml}",
         tpchgen              : "io.airlift.tpch:tpch:${versions.tpchgen}",
         tpcdsgen             : "com.teradata.tpcds:tpcds:${versions.tpcdsgen}",
-        hive_jdbc            : "com.facebook.presto.hive:hive-apache-jdbc:${versions.hive_jdbc}",
+        hive_jdbc            : "io.prestosql.hive:hive-apache-jdbc:${versions.hive_jdbc}",
         hive                 : "com.facebook.presto.hive:hive-apache:${versions.hive}",
         presto_jdbc          : "io.prestosql:presto-jdbc:${versions.presto}",
         reflections          : "org.reflections:reflections:${versions.reflections}",
