Upgrade Hive to 1.2.2-3

--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ ext.versions = [
         commons_lang3: '3.3.2',
         commons_dbcp2: '2.1',
         hive_jdbc    : '0.13.1-6',
-        hive         : '1.2.0-2',
+        hive         : '1.2.2-3',
         presto       : '302',
         reflections  : '0.9.9',
         bytebuddy    : '0.7-rc2',
@@ -85,7 +85,7 @@ ext.libraries = [
         tpchgen              : "io.airlift.tpch:tpch:${versions.tpchgen}",
         tpcdsgen             : "com.teradata.tpcds:tpcds:${versions.tpcdsgen}",
         hive_jdbc            : "io.prestosql.hive:hive-apache-jdbc:${versions.hive_jdbc}",
-        hive                 : "com.facebook.presto.hive:hive-apache:${versions.hive}",
+        hive                 : "io.prestosql.hive:hive-apache:${versions.hive}",
         presto_jdbc          : "io.prestosql:presto-jdbc:${versions.presto}",
         reflections          : "org.reflections:reflections:${versions.reflections}",
         bytebuddy            : "net.bytebuddy:byte-buddy:${versions.bytebuddy}",
