--- a/tempto-examples/docker/presto-server/etc/log.properties
+++ b/tempto-examples/docker/presto-server/etc/log.properties
@@ -1,5 +1,5 @@
-com.facebook.presto=INFO
+io.prestosql=INFO
 com.sun.jersey.guice.spi.container.GuiceComponentProviderFactory=WARN
 com.ning.http.client=DEBUG
-com.facebook.presto.server.PluginManager=DEBUG
+io.prestosql.server.PluginManager=DEBUG
 io.airlift.discovery.client=INFO
