--- a/tempto-examples/docker/presto-cli/Dockerfile
+++ b/tempto-examples/docker/presto-cli/Dockerfile
@@ -1,4 +1,4 @@
-FROM prestodb/centos6-oj8
+FROM prestodev/centos6-oj8
 MAINTAINER Presto community <https://prestosql.io/community.html>
 
 RUN curl -SL http://search.maven.org/remotecontent?filepath=io/prestosql/presto-cli/302/presto-cli-302-executable.jar -o presto-cli.jar
