--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,12 @@ jdk: openjdk8
 git:
   quiet: true
 
-install: ./gradlew build -x test
+install:
+  - mvn install -B -V -DskipTests -Dair.check.skip-all
+  - mvn dependency:go-offline -B -Dsilent
 
 script:
-  - ./gradlew test
+  - mvn install -B
   - ./tempto-examples/bin/run_on_docker.sh --thread-count 2 -x failing
   - CONFIG_FILE=tempto-configuration-read-only.yaml ./tempto-examples/bin/run_on_docker.sh --thread-count 2 -g in_memory
   - CONFIG_FILE=tempto-configuration-no-db.yaml ./tempto-examples/bin/run_on_docker.sh --thread-count 2 -g ssh
