--- a/tempto-core/pom.xml
+++ b/tempto-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.prestosql.tempto</groupId>
         <artifactId>tempto-root</artifactId>
-        <version>172</version>
+        <version>173-SNAPSHOT</version>
     </parent>
 
     <artifactId>tempto-core</artifactId>
