--- a/pom.xml
+++ b/pom.xml
@@ -92,15 +92,15 @@
             </dependency>
 
             <dependency>
-                <groupId>io.airlift.tpch</groupId>
+                <groupId>io.prestosql.tpch</groupId>
                 <artifactId>tpch</artifactId>
-                <version>0.10</version>
+                <version>1.0</version>
             </dependency>
 
             <dependency>
-                <groupId>com.teradata.tpcds</groupId>
+                <groupId>io.prestosql.tpcds</groupId>
                 <artifactId>tpcds</artifactId>
-                <version>1.2</version>
+                <version>1.3</version>
             </dependency>
 
             <dependency>
