--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>io.prestosql.tempto</groupId>
     <artifactId>tempto-root</artifactId>
-    <version>175-SNAPSHOT</version>
+    <version>175</version>
     <packaging>pom</packaging>
 
     <description>Tempto - test framework</description>
@@ -21,7 +21,7 @@
     <scm>
         <connection>scm:git:git://github.com/prestosql/tempto.git</connection>
         <url>https://github.com/prestosql/tempto</url>
-        <tag>HEAD</tag>
+        <tag>175</tag>
     </scm>
 
     <properties>
