--- a/tempto-examples/pom.xml
+++ b/tempto-examples/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.prestosql.tempto</groupId>
         <artifactId>tempto-root</artifactId>
-        <version>177</version>
+        <version>178-SNAPSHOT</version>
     </parent>
 
     <artifactId>tempto-examples</artifactId>
