--- a/tempto-runner/pom.xml
+++ b/tempto-runner/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.prestosql.tempto</groupId>
         <artifactId>tempto-root</artifactId>
-        <version>182-SNAPSHOT</version>
+        <version>182</version>
     </parent>
 
     <artifactId>tempto-runner</artifactId>
