--- a/pom.xml
+++ b/pom.xml
@@ -92,15 +92,15 @@
             </dependency>
 
             <dependency>
-                <groupId>io.prestosql.tpch</groupId>
+                <groupId>io.trino.tpch</groupId>
                 <artifactId>tpch</artifactId>
-                <version>1.0</version>
+                <version>1.1</version>
             </dependency>
 
             <dependency>
-                <groupId>io.prestosql.tpcds</groupId>
+                <groupId>io.trino.tpcds</groupId>
                 <artifactId>tpcds</artifactId>
-                <version>1.3</version>
+                <version>1.4</version>
             </dependency>
 
             <dependency>
