--- a/pom.xml
+++ b/pom.xml
@@ -8,19 +8,19 @@
         <version>100</version>
     </parent>
 
-    <groupId>io.prestosql.tempto</groupId>
+    <groupId>io.trino.tempto</groupId>
     <artifactId>tempto-root</artifactId>
     <version>183-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <description>Tempto - test framework</description>
-    <url>https://github.com/prestosql/tempto</url>
+    <url>https://github.com/trinodb/tempto</url>
 
     <inceptionYear>2015</inceptionYear>
 
     <scm>
-        <connection>scm:git:git://github.com/prestosql/tempto.git</connection>
-        <url>https://github.com/prestosql/tempto</url>
+        <connection>scm:git:git://github.com/trinodb/tempto.git</connection>
+        <url>https://github.com/trinodb/tempto</url>
         <tag>HEAD</tag>
     </scm>
 
@@ -44,19 +44,19 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>io.prestosql.tempto</groupId>
+                <groupId>io.trino.tempto</groupId>
                 <artifactId>tempto-core</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>io.prestosql.tempto</groupId>
+                <groupId>io.trino.tempto</groupId>
                 <artifactId>tempto-kafka</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>io.prestosql.tempto</groupId>
+                <groupId>io.trino.tempto</groupId>
                 <artifactId>tempto-runner</artifactId>
                 <version>${project.version}</version>
             </dependency>
