--- a/tempto-kafka/pom.xml
+++ b/tempto-kafka/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>io.prestosql.tempto</groupId>
+        <groupId>io.trino.tempto</groupId>
         <artifactId>tempto-root</artifactId>
         <version>183-SNAPSHOT</version>
     </parent>
@@ -17,7 +17,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.prestosql.tempto</groupId>
+            <groupId>io.trino.tempto</groupId>
             <artifactId>tempto-core</artifactId>
         </dependency>
 
