--- a/pom.xml
+++ b/pom.xml
@@ -134,9 +134,9 @@
             </dependency>
 
             <dependency>
-                <groupId>io.prestosql.hive</groupId>
+                <groupId>io.trino.hive</groupId>
                 <artifactId>hive-apache</artifactId>
-                <version>3.0.0-4</version>
+                <version>3.1.2-6</version>
             </dependency>
 
             <dependency>
