--- a/tempto-examples/docker/docker-compose.yml
+++ b/tempto-examples/docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 services:
   hadoop-master:
     hostname: hadoop-master
-    image: 'prestodev/hdp2.5-hive:13'
+    image: 'ghcr.io/trinodb/testing/hdp2.6-hive:38'
     ports:
       - '1080:1080'
       - '8020:8020'
@@ -70,7 +70,7 @@ services:
       - 'presto-master'
 
   runner:
-    image: 'prestodev/centos6-oj8:13'
+    image: 'ghcr.io/trinodb/testing/centos6-oj8:38'
     ports:
       - '5005:5005'
     volumes:
