--- a/tempto-examples/docker/ssh/Dockerfile
+++ b/tempto-examples/docker/ssh/Dockerfile
@@ -1,4 +1,4 @@
-FROM prestodev/centos6-oj8
+FROM ghcr.io/trinodb/testing/centos6-oj8:38
 
 RUN yum install -y openssh-server openssh-clients passwd
 RUN echo s3cr37_p@55 | passwd --stdin root
