--- a/tempto-examples/docker/trino-server/etc/config.properties
+++ b/tempto-examples/docker/trino-server/etc/config.properties
@@ -1,4 +1,4 @@
-node.id=presto-master
+node.id=trino-master
 node.environment=test
 coordinator=true
 node-scheduler.include-coordinator=true
@@ -6,4 +6,4 @@ http-server.http.port=8080
 query.max-memory=256MB
 query.max-memory-per-node=128MB
 discovery-server.enabled=true
-discovery.uri=http://presto-master:8080
+discovery.uri=http://trino-master:8080
