--- a/tempto-examples/docker/trino-server/etc/log.properties
+++ b/tempto-examples/docker/trino-server/etc/log.properties
@@ -1,5 +1,3 @@
-io.prestosql=INFO
+io.trino=INFO
 com.sun.jersey.guice.spi.container.GuiceComponentProviderFactory=WARN
-com.ning.http.client=DEBUG
-io.prestosql.server.PluginManager=DEBUG
 io.airlift.discovery.client=INFO
