--- a/tempto-examples/pom.xml
+++ b/tempto-examples/pom.xml
@@ -78,9 +78,9 @@
         </dependency>
 
         <dependency>
-            <groupId>io.prestosql</groupId>
-            <artifactId>presto-jdbc</artifactId>
-            <version>328</version>
+            <groupId>io.trino</groupId>
+            <artifactId>trino-jdbc</artifactId>
+            <version>356</version>
             <scope>runtime</scope>
         </dependency>
 
