--- a/pom.xml
+++ b/pom.xml
@@ -190,6 +190,12 @@
                 <artifactId>junit</artifactId>
                 <version>4.13.1</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.jetbrains</groupId>
+                <artifactId>annotations</artifactId>
+                <version>19.0.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
