--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,11 +10,24 @@ jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         java: ['8', '11', '15']
     steps:
     - uses: actions/checkout@v2
-    - name: ${{ matrix.java }}
-      uses: actions/setup-java@v1
+    - uses: actions/setup-java@v2
       with:
+        distribution: 'zulu'
         java-version: ${{ matrix.java }}
+    - name: compile and install
+      run: ./mvnw install -B -V -DskipTests -Dair.check.skip-all
+    - name: test
+      run: ./mvnw install -B
+    - name: tempto test (exclusion)
+      run: ./tempto-examples/bin/run_on_docker.sh --thread-count 2 -x failing -e io.prestosql.tempto.examples.ExclusionTest.failingTest,io.prestosql.tempto.examples.AnotherExclusionTest
+    - name: tempto test (config-read-only)
+      run: CONFIG_FILE=tempto-configuration-read-only.yaml ./tempto-examples/bin/run_on_docker.sh --thread-count 2 -g in_memory
+    - name: tempto test (config-no-db)
+      run: CONFIG_FILE=tempto-configuration-no-db.yaml ./tempto-examples/bin/run_on_docker.sh --thread-count 2 -g ssh
+    - name: tempto test (config-invalid-ssh-and-psql)
+      run: CONFIG_FILE=tempto-configuration-invalid-ssh-and-psql.yaml ./tempto-examples/bin/run_on_docker.sh --thread-count 2 -g in_memory
