--- a/tempto-core/pom.xml
+++ b/tempto-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.trino.tempto</groupId>
         <artifactId>tempto-root</artifactId>
-        <version>186-SNAPSHOT</version>
+        <version>186</version>
     </parent>
 
     <artifactId>tempto-core</artifactId>
