Use version 13.4 for Postgres in running the tests
Starting from Postgres 13.5 the following exception occurs during the docker tests :

```
The authentication type 10 is not supported. Check that you have configured
the pg_hba.conf file to include the client's IP address or subnet, and
that it is using an authentication scheme supported by the driver.
```

--- a/tempto-examples/docker/docker-compose.yml
+++ b/tempto-examples/docker/docker-compose.yml
@@ -14,7 +14,7 @@ services:
 
   psql1:
     hostname: psql1
-    image: 'postgres'
+    image: 'postgres:13.4'
     ports:
       - '15432:5432'
     environment:
@@ -23,7 +23,7 @@ services:
 
   psql2:
     hostname: psql2
-    image: 'postgres'
+    image: 'postgres:13.4'
     ports:
       - '15433:5432'
     environment:
