--- a/tempto-runner/pom.xml
+++ b/tempto-runner/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.trino.tempto</groupId>
         <artifactId>tempto-root</artifactId>
-        <version>187-SNAPSHOT</version>
+        <version>187</version>
     </parent>
 
     <artifactId>tempto-runner</artifactId>
