--- a/tempto-examples/pom.xml
+++ b/tempto-examples/pom.xml
@@ -14,6 +14,8 @@
     <properties>
         <air.main.basedir>${project.parent.basedir}</air.main.basedir>
         <main-class>io.trino.tempto.examples.TemptoExamples</main-class>
+        <!-- there are no tests in this module -->
+        <skipTests>true</skipTests>
     </properties>
 
     <dependencies>
