Use Cassandra driver v4
Replace the legacy Cassandra client driver

`com.datastax.cassandra:cassandra-driver-core:3.x`

with

`com.datastax.oss:java-driver-core:4.x`

--- a/tempto-examples/src/main/resources/tempto-configuration.yaml
+++ b/tempto-examples/src/main/resources/tempto-configuration.yaml
@@ -69,6 +69,7 @@ databases:
   cassandra:
     host: ${cluster.cassandra}
     port: 9042
+    local_datacenter: datacenter1
     default_schema: test
     skip_create_schema: false
     table_manager_type: cassandra
