--- a/pom.xml
+++ b/pom.xml
@@ -188,9 +188,9 @@
             </dependency>
 
             <dependency>
-                <groupId>com.datastax.cassandra</groupId>
-                <artifactId>cassandra-driver-core</artifactId>
-                <version>3.8.0</version>
+                <groupId>com.datastax.oss</groupId>
+                <artifactId>java-driver-core</artifactId>
+                <version>4.14.0</version>
             </dependency>
 
             <dependency>
