--- a/tempto-examples/pom.xml
+++ b/tempto-examples/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.trino.tempto</groupId>
         <artifactId>tempto-root</artifactId>
-        <version>189-SNAPSHOT</version>
+        <version>189</version>
     </parent>
 
     <artifactId>tempto-examples</artifactId>
